# hypergeomatrix

./: CHANGELOG.md  LICENSE  README.md  README_hackage.md  hypergeomatrix.cabal  hypergeomatrix.code-workspace  stack.yaml
.github/: README.md
.github/workflows/: GithubAction.yml  Stack-lts.yml  Stack-nightly.yml
src/Math/: HypergeoMatrix.hs
src/Math/HypergeoMatrix/: Gaussian.hs  HypergeoMatrix.hs  Internal.hs
tests/: Approx.hs  Main.hs
