cabal-version:       2.2
name:                hypergeomatrix
version:             0.1.0.0
synopsis:            Hypergeometric function of a matrix argument
description:         Evaluation of hypergeometric functions of a matrix argument,
                     following Koev & Edelman's algorithm.
homepage:            https://github.com/stla/hypergeomPFQ#readme
license:             BSD-3-Clause
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2019 Stéphane Laurent
category:            Math, Numeric
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Math.HypergeoMatrix
  other-modules:       Math.HypergeoMatrix.HypergeoMatrix
                     , Math.HypergeoMatrix.Internal
                     , Math.HypergeoMatrix.Gaussian
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , cyclotomic
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite unit-tests
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       tests/
  other-modules:        Approx
  Build-Depends:        base >= 4.7 && < 5
                      , tasty
                      , tasty-hunit
                      , hypergeomatrix
  Default-Language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/hypergeomatrix
